--- a/public/stylesheets/flights-index.css
+++ b/public/stylesheets/flights-index.css
@@ -1,7 +1,12 @@
+html {
+}
+
 body {
+  background-repeat: no-repeat;
+  background-size: cover;
   background: linear-gradient(#bdc3c7, #2c3e50);
   margin: 0 auto;
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   text-align: center;
 }
