--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -28,10 +28,12 @@
             </ul>
         </div>
     </nav>
+
     <div class="container">
         <table class="table table-striped">
             <thead>
                 <tr class="table-primary">
+                    <th class="align-middle">Remove</th>
                     <th class="align-middle">Airline</th>
                     <th class="align-middle">Flight #</th>
                     <th class="align-middle">Airport Code</th>
@@ -42,23 +44,30 @@
             <tbody>
                 <% flights.forEach(function(f) { %>
                     <tr>
-                        <td class="align-middle">
-                            <%= f.property %>
-                        </td>
-                        <td class="align-middle">
-                            <%= f.flightNo %>
-                        </td>
-                        <td class="align-middle">
-                            <%= f.airport %>
-                        </td>
-                        <td class="align-middle">
-                            <%= f.departs %>
-                        </td>
-                        <td class="align-middle">
-                            <a class="btn btn-primary" href="/flights/<%= f._id %>">Details</a>
-                        </td>
+                        <form action="/flights/<%= f._id %>?_method=DELETE" method="POST">
+                            <td class="align-middle">
+                                <button class="btn btn-danger" type="submit">X</button>
+                            </td>
+                            <td class="align-middle">
+                                <%= f.property %>
+                            </td>
+                            <td class="align-middle">
+                                <%= f.flightNo %>
+                            </td>
+                            <td class="align-middle">
+                                <%= f.airport %>
+                            </td>
+                            <td class="align-middle">
+                                <%= f.departs %>
+                            </td>
+                            <td class="align-middle">
+                                <a class="btn btn-primary" href="/flights/<%= f._id %>">Details</a>
+                            </td>
+                        </form>
                     </tr>
-                    <% }) %>
+
+                    <% }); %>
+
             </tbody>
         </table>
 
