--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -70,40 +70,17 @@
         </div>
 
     </div>
-    <h2>Destination</h2>
 
-    <form id="add-destination-form" method="POST" action="/flights/<%= flight._id %>/destinations">
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text">Arrival Date:</span>
-            </div>
-            <input name="arrival" type="datetime-local" class="items form-control" aria-label="arrival"
-                aria-describedby="basic-addon2">
-        </div>
-
-        <div class=" input-group mb-3">
-            <div class="input-group-prepend">
-                <label class="input-group-text" for="airport">Airport</label>
-            </div>
-            <select class="items custom-select" name="airport">
-                <option value="AUS">AUS</option>
-                <option value="DFW">DFW</option>
-                <option value="DEN" selected="selected">DEN</option>
-                <option value="LAX">LAX</option>
-                <option value="SAN">SAN</option>
-            </select>
-        </div>
-        <input class="btn btn-primary" type="submit" value="Add Destination">
-    </form>
-
-
+    <h2>Ticket Information</h2>
+    <h2 class="btn btn-primary">Add Ticket</h2>
     <% if (flight.destinations.length) { %>
         <div class="container destination">
             <table class="table table-striped">
                 <thead>
                     <tr class="table-primary">
-                        <th>Arrival Date</th>
-                        <th>Airport</th>
+                        <th>Seat Number</th>
+                        <th>Cost of Ticket</th>
+                        <th>Flight Info</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -111,6 +88,9 @@
                         <tr>
                             <td>
                                 <%= f.arrival %>
+                            </td>
+                            <td>
+                                <%= flight.flightNo%>
                             </td>
                             <td>
                                 <%= f.airport %>
@@ -124,5 +104,63 @@
                 <h2 class="noDestinations">No Destinations Yet</h2>
                 <% } %>
         </div>
+
+
+
+
+        <h2>Destination</h2>
+
+        <form id="add-destination-form" method="POST" action="/flights/<%= flight._id %>/destinations">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">Arrival Date:</span>
+                </div>
+                <input name="arrival" type="datetime-local" class="items form-control" aria-label="arrival"
+                    aria-describedby="basic-addon2">
+            </div>
+
+            <div class=" input-group mb-3">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="airport">Airport</label>
+                </div>
+                <select class="items custom-select" name="airport">
+                    <option value="AUS">AUS</option>
+                    <option value="DFW">DFW</option>
+                    <option value="DEN" selected="selected">DEN</option>
+                    <option value="LAX">LAX</option>
+                    <option value="SAN">SAN</option>
+                </select>
+            </div>
+            <input class="btn btn-primary" type="submit" value="Add Destination">
+        </form>
+
+
+        <% if (flight.destinations.length) { %>
+            <div class="container destination">
+                <table class="table table-striped">
+                    <thead>
+                        <tr class="table-primary">
+                            <th>Arrival Date</th>
+                            <th>Airport</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% flight.destinations.forEach(function(f) { %>
+                            <tr>
+                                <td>
+                                    <%= f.arrival %>
+                                </td>
+                                <td>
+                                    <%= f.airport %>
+                                </td>
+                            </tr>
+                            <% }); %>
+                    </tbody>
+                </table>
+
+                <% } else { %>
+                    <h2 class="noDestinations">No Destinations Yet</h2>
+                    <% } %>
+            </div>
 
 </html>
