--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/flights-index.css' />
-    <script src="../../public/javascripts/background.js"></script>
 
-    <title>Mongoose Flightz</title>
+    <title>E-Flightz</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" onclick="generate()" href="/">Home</a>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" onclick="generate()" href="/">E-Flightz</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/flights/new">Add<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/flights/new">Add Flight<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
