--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -10,13 +10,13 @@
 
     <link rel='stylesheet' href='/stylesheets/flights-new.css' />
 
-    <title>Mongoose Flightz</title>
+    <title>E-Flightz</title>
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" onclick="generate()" href="/">Home</a>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" onclick="generate()" href="/">E-Flightz</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
