--- a/public/stylesheets/flights-details.css
+++ b/public/stylesheets/flights-details.css
@@ -1,5 +1,9 @@
+html {
+  min-height: 100vh;
+}
+
 body {
-  height: 100vh;
+  height: 100%;
 }
 
 .current {
@@ -23,4 +27,26 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.airline-info-div {
+  width: 1000px;
+}
+
+.airline-info {
+  width: 500px;
+  font-weight: 700;
+}
+
+.nav-link {
+  font-size: 25px;
+  text-decoration: underline;
+}
+.nav-link:hover {
+  color: white !important;
+}
+
+.navbar-brand {
+  color: white !important;
+  font-size: 40px;
 }
