--- a/public/stylesheets/flights-new.css
+++ b/public/stylesheets/flights-new.css
@@ -28,11 +28,21 @@ form {
   align-items: center;
 }
 
-a {
-  text-transform: uppercase;
+nav {
+  background: rgba(0, 0, 0, 0.2);
 }
+
+.nav-link {
+  font-size: 25px;
+  text-decoration: underline;
+}
+.nav-link:hover {
+  color: white !important;
+}
+
 .navbar-brand {
-  font-size: 30px;
+  color: white !important;
+  font-size: 40px;
 }
 
 .input-group-text {
