--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,12 @@
   <link rel='stylesheet' href='/stylesheets/main-index.css' />
 
   <script src="../../public/javascripts/background.js"></script>
-  <title>Mongoose Flightz</title>
+  <title>E-Flightz</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="/">Home</a>
+    <a class="navbar-brand" href="/">E-Flightz</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
